generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}


generator dbml {
  provider            = "prisma-dbml-generator"
  output              = "./dbml"
  outputName          = "seed-model.dbml"
  projectName         = "SEED 2.0"
  projectDatabaseType = "PostgreSQL"
  projectNote         = "SEED 2.0"
}


generator docs {
  provider = "node node_modules/prisma-docs-generator"
  output   = "./docs"
}

model User {
  id        String    @id @default(uuid())
  username  String    @unique
  email     String    @unique
  name      String 
  password  String 
  posts     Post[]
  comments  Comment[]
  CreatedAt DateTime  @default(now())
  UpdatedAt DateTime  @updatedAt

  @@map("users")
}

model Post {
  id        String      @id @default(uuid())
  slug      String      @unique
  title     String
  content   String?
  published Boolean     @default(false)
  author    User        @relation(fields: [authorId], references: [id])
  authorId  String
  comments  Comment[]
  createdAt DateTime    @default(now())
  updatedAt DateTime    @updatedAt

  @@map("posts")
}

model Comment {
  id        String   @id @default(uuid())
  content   String
  post      Post     @relation(fields: [postId], references: [id])
  postId    String
  author    User     @relation(fields: [authorId], references: [id])
  authorId  String
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@map("comments")
}