//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Project "SEED 2.0" {
  database_type: 'PostgreSQL'
  Note: 'SEED 2.0'
}

Table users {
  id String [pk]
  username String [unique, not null]
  email String [unique, not null]
  name String [not null]
  password String [not null]
  posts posts [not null]
  comments comments [not null]
  CreatedAt DateTime [default: `now()`, not null]
  UpdatedAt DateTime [not null]
}

Table posts {
  id String [pk]
  slug String [unique, not null]
  title String [not null]
  content String
  published Boolean [not null, default: false]
  author users [not null]
  authorId String [not null]
  comments comments [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table comments {
  id String [pk]
  content String [not null]
  post posts [not null]
  postId String [not null]
  author users [not null]
  authorId String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Ref: posts.authorId > users.id

Ref: comments.postId > posts.id

Ref: comments.authorId > users.id